--- a/ProgressionTimeline/Accounts/templates/Accounts/profile.html
+++ b/ProgressionTimeline/Accounts/templates/Accounts/profile.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {%block body%}
+{%include 'navbar.html'%}
 <div class="container">
     <h1>Logged in as: {{user.username}}</h1>
-
 </div>
 {%endblock%}
