--- a/ProgressionTimeline/Accounts/templates/Accounts/signup.html
+++ b/ProgressionTimeline/Accounts/templates/Accounts/signup.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 {%block body%}
-    <div class="card-container">
+<div class="container flex-fill card-container">
         {%if user.is_authenticated%}
             <h1>
                 Welcome, {{user.username}}! You are already logged in, please proceed to either logout or use the application now
@@ -39,29 +39,6 @@
                 {{form.errors|title}}
             {%endif%}
         </form>
-        {%endif%}
-        
-    </div>
+        {%endif%}  
+</div>
 {%endblock%}
-
-
-<!--         
-            {%csrf_token%}
-            <div class="form-group">
-                <label for="username"><strong>Username:</strong></label>
-                {{form.username}}
-            </div>
-            <div class="form-group">
-                <label for="password"><strong>Password:</strong></label>
-                {{form.password}}
-            </div>
-            <div>
-            {% if form.errors %}
-                <p class=" label label-danger">
-                    The username and password do not match, please try again
-                </p>
-            {% endif %}
-            </div>
-            <input type="submit" class="btn btn-success" />
-        </form>
-         -->
