--- a/ProgressionTimeline/Accounts/templates/base.html
+++ b/ProgressionTimeline/Accounts/templates/base.html
@@ -10,8 +10,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static 'base.css' %}">
+    {%block head%}{%endblock%}
 </head>
-<body>
+<body class="d-flex flex-column">
     {%block body%}
     {%endblock%}
 </body>
