--- a/ProgressionTimeline/TaskManager/templates/TaskManager/list_details.html
+++ b/ProgressionTimeline/TaskManager/templates/TaskManager/list_details.html
@@ -8,7 +8,7 @@
 <div class="container bg-white flex-fill">
     <div class="text-center"><h1>{{list.name}}</h1></div>
     <div class="my-3 w-100 d-flex justify-content-end">
-        <a href="{%url 'add_task' list.id%}" class="btn btn-success">Add Task</a>
+        <a href="{%url 'create_task' list.id%}" class="btn btn-success">Add Task</a>
         <a class="btn btn-danger text-white">Delete List</a>
     </div>
     <div>
