--- a/ProgressionTimeline/Accounts/templates/navbar.html
+++ b/ProgressionTimeline/Accounts/templates/navbar.html
@@ -7,14 +7,15 @@
                 Dashboard
             </a>
         </li>
-        <!-- <li class="nav-item">
-            <a class="nav-link my-1" href="#">
-                My Lists
-            </a>
-        </li> -->
+        
         <li class="nav-item">
-            <a class="nav-link my-1" href="#">
+            <a class="nav-link my-1" href="{%url 'timeline'%}">
                 Timeline
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link my-1" href="{%url 'list_create'%}">
+                New List
             </a>
         </li>
         {%if user.is_authenticated%}
