--- a/ProgressionTimeline/TaskManager/templates/TaskManager/list_details.html
+++ b/ProgressionTimeline/TaskManager/templates/TaskManager/list_details.html
@@ -8,8 +8,8 @@
 <div class="container bg-white flex-fill">
     <div class="text-center"><h1>{{list.name}}</h1></div>
     <div class="my-3 w-100 d-flex justify-content-end">
-        <a href="{%url 'create_task' list.id%}" class="btn btn-success">Add Task</a>
-        <a class="btn btn-danger text-white">Delete List</a>
+        <a href="{%url 'task_create' list.id%}" class="btn btn-success">Add Task</a>
+        <a href="{%url 'list_delete' list.id%}" class="btn btn-danger text-white">Delete List</a>
     </div>
     <div>
         {%include 'TaskManager/task_list.html'%}
