--- a/ProgressionTimeline/TaskManager/templates/TaskManager/task_list.html
+++ b/ProgressionTimeline/TaskManager/templates/TaskManager/task_list.html
@@ -1,8 +1,5 @@
 <h4 class="px-md-3">Pending:</h4>
 <ul id='incomplete-tasks-list' class="list-group list-group-flush">
-    <!-- {%if not incomplete_tasks%}
-    <li class="list-group-item px-2 px-md-4 d-flex"><strong>No items in this list</strong></li>
-    {%endif%} -->
     {%for task in incomplete_tasks%}
     <li id="{{task.id}}" class="list-group-item px-2 px-md-4 d-flex">
         <div class='flex-fill'>
@@ -10,9 +7,14 @@
             <p>{{task.description}}</p>
         </div>
         <div class="d-flex flex-column float-right justify-content-center align-items-center">
-            <button class="btn btn-primary float-right my-auto toggle-btn">
-                Mark Complete
-            </button>
+            <div>
+                <button class="btn btn-danger float-right my-auto delete-btn" data-toggle="modal" data-target="#delete_task_modal">
+                    Delete
+                </button>
+                <button class="btn btn-primary float-right my-auto toggle-btn">
+                    Mark Complete
+                </button>
+            </div>
             <strong class="text-nowrap">Deadline: 
                 {% with deadline=task.deadline.date|date:"d-m-y" %}
                     {{deadline|default:"Not due"}}
@@ -25,19 +27,21 @@
 </ul>
 <h4 class="px-md-3">Complete:</h4>
 <ul id='complete-tasks-list' class="list-group list-group-flush">
-    <!-- {%if not complete_tasks%}
-    <li class="list-group-item px-2 px-md-4 d-flex"><strong>No items in this list</strong></li>
-    {%endif%} -->
     {%for task in complete_tasks%}
         <li id="{{task.id}}" class="list-group-item px-2 px-md-4 d-flex">
             <div class='flex-fill'>
                 <strong>{{task.title}}</strong>
                 <p>{{task.description}}</p>
-                </div>
+            </div>
             <div class="d-flex flex-column float-right justify-content-center align-items-center">
-                <button class="btn btn-primary float-right my-auto toggle-btn">
-                    Mark Incomplete
-                </button>
+                <div>
+                    <button class="btn btn-danger float-right my-auto delete-btn" data-toggle="modal" data-target="#delete_task_modal">
+                        Delete
+                    </button>
+                    <button class="btn btn-primary float-right my-auto toggle-btn">
+                        Mark Incomplete
+                    </button>
+                </div>
                 <strong class="text-nowrap">Deadline: 
                     {% with deadline=task.deadline.date|date:"d-m-y" %}
                         {{deadline|default:"Not due"}}
@@ -47,3 +51,20 @@
         </li>
     {%endfor%}
 </ul>
+<div class="modal fade" id="delete_task_modal">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Confirm Delete</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body" id="delete-task-modal-body">
+                <p>Are you sure you want to delete this task?</p>
+                
+            </div>
+            <div class="modal-footer">
+                <button id="confirm-task-delete" type="button" class="btn btn-danger" data-dismiss="modal">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
