--- a/ProgressionTimeline/Accounts/templates/Accounts/login.html
+++ b/ProgressionTimeline/Accounts/templates/Accounts/login.html
@@ -9,16 +9,16 @@
         <form method="POST" class="bg-light p-2">
             {%csrf_token%}
             <div class="form-group">
-                <label for="username"><strong>Username:</strong></label>
-                {{form.username}}
+                <label for="id_email"><strong>Email:</strong></label>
+                {{form.email}}
             </div>
             <div class="form-group">
-                <label for="password"><strong>Password:</strong></label>
+                <label for="id_password"><strong>Password:</strong></label>
                 {{form.password}}
             </div>
             <div>
             {% if form.errors %}
-                <p class=" label label-danger">
+                <p class="label label-danger">
                     The username and password do not match, please try again
                 </p>
             {% endif %}
