--- a/ProgressionTimeline/Accounts/templates/Accounts/signup.html
+++ b/ProgressionTimeline/Accounts/templates/Accounts/signup.html
@@ -9,11 +9,16 @@
         <form method="POST" class="bg-light p-2">
             {%csrf_token%}
             <div class="form-group">
-                <label for="username"><strong>Username:</strong></label>
+                <label for="id_email"><strong>Email:</strong></label>
+                {{form.email}}
+            </div>
+            <div class="form-group">
+                <label for="id_username"><strong>Username:</strong></label>
                 {{form.username}}
-                <label for="username">
-                    Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.
-                </label>
+            </div>
+            <div class="form-group">
+                <label for="id_full_name"><strong>Full Name:</strong></label>
+                {{form.full_name}}
             </div>
             <div class="form-group">
                 <label for="password1"><strong>Password:</strong></label>
